# dual-annealing

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  ex_1.cpp  ex_3.cpp  rastrigin.cpp  tsallis.cpp
include/: assert.hpp  buffers.hpp  chain.hpp  config.hpp  tsallis_distribution.hpp
src/: assert.cpp  buffers.cpp
